--- a/_posts/2024-06-17-4.md
+++ b/_posts/2024-06-17-4.md
@@ -3,25 +3,11 @@ title: 에너지, 인프라, 광물 중앙아 3국과의 협력 첫발
 categories:
   - News
 excerpt: >
-  "국가명에서부터 크기와 관심" 중앙아시아, 글로벌 중추지역으로 주목받는 이유
-중앙아시아 3개국 순방으로 협력 강화한 대통령
-- 한-투르크 "경제협력 격상, 에너지·플랜트 사업 확대"
-- 한-카자흐 "핵심광물 공급 파트너십 구축, 민간 교류 기반 탄탄"
-- 한-우즈베크 "KTX-이음 첫 수출, 산업·에너지 등 47건의 협력문서 체결"
-- '한-중앙아 K실크로드 협력 구상' 소개로 새로운 차원의 관계 구축
-- 중앙아 5개국 정상회의 창설 및 첫 회의 개최 예정, 관계 새로운 차원으로 기대
-- 출처: 정책브리핑 www.korea.kr
+  국가명에서부터 크기와 관심" 중앙아시아, 글로벌 중추지역으로 주목받는 이유 중앙아시아 3개국 순방으로 협력 강화한 대통령
 feature_text: >
   ## implanttips 실시간 뉴스 속보입니다.
 
-  "국가명에서부터 크기와 관심" 중앙아시아, 글로벌 중추지역으로 주목받는 이유
-중앙아시아 3개국 순방으로 협력 강화한 대통령
-- 한-투르크 "경제협력 격상, 에너지·플랜트 사업 확대"
-- 한-카자흐 "핵심광물 공급 파트너십 구축, 민간 교류 기반 탄탄"
-- 한-우즈베크 "KTX-이음 첫 수출, 산업·에너지 등 47건의 협력문서 체결"
-- '한-중앙아 K실크로드 협력 구상' 소개로 새로운 차원의 관계 구축
-- 중앙아 5개국 정상회의 창설 및 첫 회의 개최 예정, 관계 새로운 차원으로 기대
-- 출처: 정책브리핑 www.korea.kr
+  국가명에서부터 크기와 관심" 중앙아시아, 글로벌 중추지역으로 주목받는 이유 중앙아시아 3개국 순방으로 협력 강화한 대통령
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
