--- a/_posts/2024-06-17-20.md
+++ b/_posts/2024-06-17-20.md
@@ -1,9 +1,5 @@
 ---
-title: - 목마름, 뜨거운 여름에 닥친 불편함
-- 뜨거운 여름, 목마름으로 고통받는 당신을 위해
-- 목마름 극복, 아무리 뜨거워도 쉽게 이겨내는 방법
-- 뜨거운 날, 목마름을 물리치는 최고의 방법은?
-- 목마름 극복전술, 당신의 여름을 시원하게 바꿔드립니다
+title: 뜨거운 여름, 목마름으로 고통받는 당신을 위해
 categories:
   - News
 excerpt: >
