--- a/_posts/2024-06-17-156.md
+++ b/_posts/2024-06-17-156.md
@@ -1,10 +1,5 @@
 ---
-title: 1. 제주 장마 200mm 내일 비 시작
-2. 제주 내일 장마 200mm 비 예보 최대 시작
-3. 비 제주 내일 200mm 장마 시작 최대
-4. 200mm 제주 장마 내일 비 시작 최대
-5. 장마 제주 비 내일 200mm 시작 최대
-6. 내일 제주 장마 200mm 비 최대 시작
+title: 제주 장마 200mm 내일 비 시작
 categories:
   - News
 excerpt: >
