--- a/_posts/2024-06-22-547.md
+++ b/_posts/2024-06-22-547.md
@@ -60,7 +60,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <h2 data-ke-size="size26">자료 및 문의처 안내</h2>
 
-<p>자료 출처 : 정책브리핑 <a href="www.korea.kr">www.korea.kr</a></p>
+<p>자료 출처 : 정책브리핑</p>
 
 <p>문의 : 방송통신위원회 방송통신이용자정책국 디지털이용자기반과 (02-2110-1522), 한국인터넷진흥원 디지털이용자보호단(061-820-1415)</p>
 
