--- a/_posts/2024-06-22-561.md
+++ b/_posts/2024-06-22-561.md
@@ -38,5 +38,5 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p data-ke-size="size16">정책브리핑에 따르면 해당 농식품 바우처 정책과 관련된 자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능하며, 단 사진의 경우 제3자에게 저작권이 있어 사용이 제한됨을 유의해야 합니다. 따라서 해당 정보를 이용할 경우 출처를 꼭 표기하고, 저작권법에 따라 제재를 받을 수 있음을 주의해야 합니다. </p>
 
-<p data-ke-size="size16">자료출처 : 정책브리핑 (<a href="www.korea.kr">www.korea.kr</a>)</p>
+<p data-ke-size="size16">자료출처 : 정책브리핑 </p>
 
