--- a/_posts/2024-06-24-686.md
+++ b/_posts/2024-06-24-686.md
@@ -45,7 +45,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">특별점검반은 농식품부와 한국농어촌공사, 농협과 합동으로 147개 반 440여 명으로 구성되었으며, 여름철 집중호우와 태풍으로 농업시설의 피해가 우려될 때를 대비하여 유관기관, 지방자치단체와 긴밀한 협력을 통해 피해 최소화를 위한 노력을 다할 것입니다.</p>
 
 <ul>
-  <li>여름철 농작물 및 농업시설 등 안전관리요령에 대한 자세한 정보는 <a href="http://www.korea.kr/" target="_blank" rel="noopener">농림축산식품부</a>에서 확인하실 수 있습니다.</li>
+  <li>여름철 농작물 및 농업시설 등 안전관리요령에 대한 자세한 정보는 농림축산식품부에서 확인하실 수 있습니다.</li>
   <li>문의사항은 농림축산식품부 농업정책관실 재해보험정책과(044-201-1794)로 문의하시기 바랍니다.</li>
 </ul>
 
