--- a/_posts/2024-06-24-692.md
+++ b/_posts/2024-06-24-692.md
@@ -39,7 +39,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p data-ke-size="size16">&nbsp;</p>
 
-<p>이 기사는 정책브리핑에서 제공한 자료를 기반으로 작성되었으며, <a href="www.korea.kr">정책브리핑</a>에서 자유롭게 이용이 가능합니다. 다만, 출처를 반드시 표기하여야 합니다.</p>
+<p>이 기사는 정책브리핑에서 제공한 자료를 기반으로 작성되었으며, 정책브리핑에서 자유롭게 이용이 가능합니다. 다만, 출처를 반드시 표기하여야 합니다.</p>
 
 <p data-ke-size="size16">&nbsp;</p>
 
