--- a/_posts/2024-06-24-756.md
+++ b/_posts/2024-06-24-756.md
@@ -1,7 +1,5 @@
 ---
-title: 1. 삼성자산 KODEX ETF로 미국 AI테크 TOP10 상장 예정
-2. 삼성자산 KODEX ETF의 미국 AI테크 TOP10 상장 소식
-3. KODEX 미국 AI테크 TOP10 ETF 삼성자산과 함께 상장 예정
+title: 삼성자산 KODEX ETF로 미국 AI테크 TOP10 상장 예정
 categories:
   - News
 excerpt: >
