--- a/_posts/2024-06-24-795.md
+++ b/_posts/2024-06-24-795.md
@@ -1,7 +1,5 @@
 ---
-title: 1. 동대문 건축현장에서 검은 연기 순식간에 기승!
-2. 건축현장에서의 순식간 검은 연기에 눈길
-3. 화재! 동대문 건축현장 검은 연기로 순식간에!
+title: 동대문 건축현장에서 검은 연기 순식간에 기승!
 categories:
   - News
 excerpt: >
