--- a/_posts/2024-06-24-822.md
+++ b/_posts/2024-06-24-822.md
@@ -1,9 +1,5 @@
 ---
-title: 1. 황당 포스터 도심 개그경연장…일부다처제와 독도 영유권
-2. 황당 포스터 도심 개그경연장…일부다처제와 독도 영유권
-3. 황당 개그경연장 일부다처제 독도 영유권 도심
-4. 일부다처제 독도 영유권 황당 개그경연장 도심
-5. 도심 개그경연장 황당 일부다처제 독도 영유권
+title: 황당 포스터 도심 개그경연장…일부다처제와 독도 영유권
 categories:
   - News
 excerpt: >
