--- a/_posts/2024-06-24-1012.md
+++ b/_posts/2024-06-24-1012.md
@@ -1,8 +1,5 @@
 ---
-title: 1. 참사 부산 공무원 무죄 확정 인과관계
-2. 부산 참사 공무원 무죄 확정 인과관계 없어
-3. 부산 참사 공무원 무죄 확정 인과관계
-4. 부산 참사 공무원 무죄 확정 인과관계 없어
+title: 부산 참사 공무원 무죄 확정 인과관계 없어
 categories:
   - News
 excerpt: >
