--- a/_posts/2024-06-24-1302.md
+++ b/_posts/2024-06-24-1302.md
@@ -34,7 +34,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
          <td style="text-align: center; height: 17px;">서울시 교육청 학습지원센터</td>
       </tr>
       <tr>
-         <td style="text-align: center; height: 17px;"><a href="http://slearn.seoul.go.kr">서울시 교육청 학습지원센터 바로가기</a></td>
+         <td style="text-align: center; height: 17px;">서울시 교육청 학습지원센터</td>
          <td style="text-align: center; height: 17px;">문의 전화번호: 02-1234-5678</td>
       </tr>
    </tbody>
