--- a/_posts/2024-06-24-1546.md
+++ b/_posts/2024-06-24-1546.md
@@ -1,6 +1,5 @@
 ---
-title: 넷플릭스 김치 중국 라바이차이 오역 5개 키워드를 활용하여 제목을 만들어드릴게요.
-넷플릭스 중국어 김치가 라바이차이 오역 의혹
+title: 넷플릭스 중국어 김치가 라바이차이 오역 의혹
 categories:
   - News
 excerpt: >
