--- a/_posts/2024-06-24-1576.md
+++ b/_posts/2024-06-24-1576.md
@@ -1,10 +1,5 @@
 ---
-title: 1. 이재명 수사검사 탄핵안 여 해병특검 필리버스터
-2. 수사검사 이재명 여의 탄핵안과 해병특검 필리버스터
-3. 탄핵안 수사검사 여 해병특검 필리버스터 이재명
-4. 탄핵안과 수사검사 이재명 여의 해병특검 필리버스터
-5. 이재명 수사검사 여의 탄핵안과 해병특검 필리버스터
-6. 여 수사검사 탄핵안 해병특검 이재명
+title: 이재명 수사검사 탄핵안 여 해병특검 필리버스터
 categories:
   - News
 excerpt: >
