--- a/_posts/2024-06-24-1614.md
+++ b/_posts/2024-06-24-1614.md
@@ -1,9 +1,5 @@
 ---
-title: 1. 에너지 핵심광물 방산 협력 논의에 윤대통령베트남 총리 접견
-2. 윤대통령 베트남 총리 접견! 에너지 핵심광물 방산 협력 논의
-3. 에너지 핵심광물 방산 협력 논의 윤대통령 베트남 총리 접견
-4. 윤대통령베트남 총리 접견 에너지·핵심광물·방산 협력 논의
-5. 에너지 핵심광물 방산 협력 논의  윤대통령 베트남 총리 접견
+title: 에너지 핵심광물 방산 협력 논의에 윤대통령베트남 총리 접견
 categories:
   - News
 excerpt: >
