--- a/_posts/2024-07-06-1736.md
+++ b/_posts/2024-07-06-1736.md
@@ -40,7 +40,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 </tbody>
 </table>
 
-<p data-ke-size="size16">위 내용은 정책브리핑의 정책뉴스자료로, 다만 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 자료 이용 시 출처를 반드시 표기해야 하며, 위반이 있을 시 저작권법에 따라 처벌될 수 있습니다. 출처: <a href="www.korea.kr">정책브리핑 www.korea.kr</a></p>
+<p data-ke-size="size16">위 내용은 정책브리핑의 정책뉴스자료로, 다만 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 자료 이용 시 출처를 반드시 표기해야 하며, 위반이 있을 시 저작권법에 따라 처벌될 수 있습니다. </p>
 
 <hr>
 실시간 뉴스 속보는, <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
