--- a/_posts/2024-07-06-1718.md
+++ b/_posts/2024-07-06-1718.md
@@ -27,7 +27,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p>또한, '대한민국 수산대전-여름휴가 특별전'이 마트 18곳과 온라인몰 27곳에서 진행됩니다. 해당 행사는 17일부터 다음 달 4일까지 이뤄지며, 국산 수산물을 최대 반값으로 구매할 수 있는 기회를 제공합니다.</p>
 
-<p>이번 행사에서는 대중성어종과 바다장어, 우럭, 전복, 멍게 등의 수산물에 대해 할인 혜택이 제공됩니다. 더 자세한 내용은 대한민국 수산대전 공식 누리집(<a href="www.fsale.kr">www.fsale.kr</a>)에서 확인할 수 있습니다.</p>
+<p>이번 행사에서는 대중성어종과 바다장어, 우럭, 전복, 멍게 등의 수산물에 대해 할인 혜택이 제공됩니다. 더 자세한 내용은 대한민국 수산대전 공식 누리집에서 확인할 수 있습니다.</p>
 
 <p data-ke-size="size16">&nbsp;</p>
 
