--- a/_posts/2024-07-06-1791.md
+++ b/_posts/2024-07-06-1791.md
@@ -1,10 +1,5 @@
 ---
-title: 1. 차량 시청역 주변 가해사고와 보험 사고이력 확인
-2. 가해 차량 시청역 주변 6번의 보험이력 조사 결과
-3. 보험이력 조사 차량 시청역 주변 6번 사고 사실 확인
-4. 시청역 근처 가해사고 차량 6년간 6번의 보험이력 파악
-5. 차량 시청역 주변 가해사고와 6년간 6번의 보험이력 확인
-6. 시청역 주변 가해 차량 6번 사고 보험이력 확인 결과
+title: 차량 시청역 주변 가해사고와 보험 사고이력 확인
 categories:
   - News
 excerpt: >
