--- a/_posts/2024-07-06-1817.md
+++ b/_posts/2024-07-06-1817.md
@@ -1,6 +1,5 @@
 ---
-title: 1. 후보자 논문 논란 광주 사태 · 12.12 거사 단독 보도
-2. 광주 사태 · 12.12 거사 후보자 논문 논란 단독 보도
+title: 광주 사태 · 12.12 거사 후보자 논문 논란 단독 보도
 categories:
   - News
 excerpt: >
