--- a/_posts/2024-07-08-1932.md
+++ b/_posts/2024-07-08-1932.md
@@ -9,7 +9,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
 
 <h2 data-ke-size="size26">정치 뉴스: 검찰, 순직해병 특검법 처리와 법정 소환</h2>
 
