--- a/_posts/2024-07-08-1934.md
+++ b/_posts/2024-07-08-1934.md
@@ -10,7 +10,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
 
 <h2 data-ke-size="size26">두바이초콜릿이란?</h2>
 
