--- a/_posts/2024-07-08-1936.md
+++ b/_posts/2024-07-08-1936.md
@@ -9,7 +9,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
 
 <p><b><span style="color: #ee2323;">한국 국민의힘 전당대회 내부 갈등</span></b></p>
 
