--- a/_posts/2024-07-08-1938.md
+++ b/_posts/2024-07-08-1938.md
@@ -9,7 +9,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
 
 <h2>택배 기사에게 감사의 마음을 전한 부부의 이야기</h2>
 
