--- a/_posts/2024-07-08-1929.md
+++ b/_posts/2024-07-08-1929.md
@@ -9,7 +9,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
 
 <h2 data-ke-size="size26">배우 이요원의 인스타그램에서 밝힌 결혼 이유</h2>
 
