--- a/_posts/2024-07-08-1939.md
+++ b/_posts/2024-07-08-1939.md
@@ -9,7 +9,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="implanttips 속보" /></p>
 
 <p><b><span style="color: #ee2323;">'김여사 문자' 갈등과 국민의힘 대선 주자들의 공방</span></b>
 국민의힘 전당대회를 앞두고 '김건희 여사 문자 무시' 등 현안을 둘러싼 여당 내부 갈등이 확산되고 있는 가운데, 원희룡 후보와 한동훈 후보 간에도 갈등이 고조되고 있습니다. 두 후보는 각각의 주장을 펼치며 공방을 이어가고 있으며, 오늘 광주에서 열리는 첫 권역별 합동연설회에서도 치열한 토론이 예상됩니다.</p>
