--- a/_posts/2024-07-08-1967.md
+++ b/_posts/2024-07-08-1967.md
@@ -1,6 +1,5 @@
 ---
-title: 1. 잠실우성4차 재건축 DL이앤씨가 3817억원 규모 수주
-2. DL이앤씨 3817억원 규모 잠실우성4차 재건축 수주 완료!
+title: 잠실우성4차 재건축 DL이앤씨가 3817억원 규모 수주
 categories:
   - News
 excerpt: >
