--- a/_posts/2024-07-08-2015.md
+++ b/_posts/2024-07-08-2015.md
@@ -1,8 +1,5 @@
 ---
-title: 1. 이선균 수사 정보 유출 경찰·검찰·기자 송치
-2. 이선균 수사 정보 유출 경찰 검찰 기자 송치
-3. 이선균 정보 유출 경찰 검찰 기자 송치
-4. 정보 유출 이선균 경찰 검찰 기자 송치
+title: 이선균 수사 정보 유출 경찰·검찰·기자 송치
 categories:
   - News
 excerpt: >
