--- a/_posts/2024-07-08-2003.md
+++ b/_posts/2024-07-08-2003.md
@@ -1,6 +1,5 @@
 ---
-title: 1. 화성시 전기차와 수소차 공유차량 긴급 배터리 점검
-2. 전기차 수소차 화성시 공유차량 긴급 배터리 점검
+title: 화성시 전기차와 수소차 공유차량 긴급 배터리 점검
 categories:
   - News
 excerpt: >
