--- a/_posts/2024-07-09-2156.md
+++ b/_posts/2024-07-09-2156.md
@@ -33,7 +33,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <h2>추가 안내 및 참고</h2>
 
-<p>소비자원은 수영복을 젖은 상태로 비닐봉지에 넣으면 색이 변할 수 있어 마른 수건에 감싸 집으로 가져가라고 당부하였으며, 자세한 시험 결과는 <b><span style="color: #1a5490;"><a href="www.consumer.go.kr">소비자24</a></span></b> 홈페이지 '비교공감'에서 확인 가능합니다. 소비자들은 안전한 제품 이용을 위해 해당 내용을 숙지하고 참고하기 바랍니다.</p>
+<p>소비자원은 수영복을 젖은 상태로 비닐봉지에 넣으면 색이 변할 수 있어 마른 수건에 감싸 집으로 가져가라고 당부하였으며, 자세한 시험 결과는 <b><span style="color: #1a5490;"><a href="https://www.consumer.go.kr">소비자24</a></span></b> 홈페이지 '비교공감'에서 확인 가능합니다. 소비자들은 안전한 제품 이용을 위해 해당 내용을 숙지하고 참고하기 바랍니다.</p>
 
 <hr>
 
