--- a/_posts/2024-07-12-2584.md
+++ b/_posts/2024-07-12-2584.md
@@ -1,10 +1,5 @@
 ---
-title: 1. 주거환경 개선, 지역별 맞춤 지원으로 지역 전략 사업 확대
-2. 맞춤 지원, 주거환경 개선으로 지역별 사업 확대
-3. 주거환경, 맞춤 지원으로 지역별 전략 사업 확대
-4. 맞춤 지원, 지역별 사업으로 주거환경 개선 확대
-5. 주거환경, 맞춤 지원으로 지역별 전략 확대
-6. 확대되는 주거환경, 맞춤 지원으로 지역별 사업
+title: 주거환경 개선, 지역별 맞춤 지원으로 지역 전략 사업 확대
 categories:
   - News
 excerpt: >
