--- a/_posts/2024-07-12-2602.md
+++ b/_posts/2024-07-12-2602.md
@@ -1,10 +1,5 @@
 ---
-title: 1. 국산 잠수함, 강력한 2번함 기공식으로 대형 이목!
-2. 강력한 국산 잠수함 2번함, 대형 기공식으로 이목 집중!
-3. 국산 잠수함 2번함 기공식, 강력한 대형으로 이목 집중!
-4. 강력한 국산 잠수함 2번함, 대형 기공식으로 이목 집중!
-5. 국산 잠수함 2번함, 더 강력해진 대형 기공식으로 인기!
-6. 강력한 국산 잠수함 2번함, 대형 기공식으로 이목 집중!
+title: 국산 잠수함, 강력한 2번함 기공식으로 대형 이목!
 categories:
   - News
 excerpt: >
