--- a/_posts/2024-07-12-2637.md
+++ b/_posts/2024-07-12-2637.md
@@ -1,8 +1,5 @@
 ---
-title: 1. 차량 매장 돌진 청주서 1명 사망·2명 부상 사고
-2. 청주 차량 돌진 1명 사망·2명 부상 사건 발생
-3. 사망 1명·부상 2명 청주 차량 매장 돌진 사고
-4. 청주 차량 매장 돌진 1명 사망·2명 부상 사건 요약
+title: 차량 매장 돌진 청주서 1명 사망·2명 부상 사고
 categories:
   - News
 excerpt: >
