--- a/_posts/2024-07-15-2892.md
+++ b/_posts/2024-07-15-2892.md
@@ -13,7 +13,7 @@ image: '/assets/img/newsdao_breakingnews.jpg'
 
 <h2 data-ke-size="size26">로또 7/13 복권 구매 안내</h2>
 
-<p data-ke-size="size16">로또 7/13은 한국의 복권 게임 중 하나로, 매주 토요일에 추첨됩니다. 로또 7/13을 구매하여 거액의 상금을 획들할 기회를 놓치지 마세요. 자세한 사항은 <a href="www.dhlottery.co.kr">동행복권 홈페이지</a>에서 확인하실 수 있습니다.</p>
+<p data-ke-size="size16">로또 7/13은 한국의 복권 게임 중 하나로, 매주 토요일에 추첨됩니다. 로또 7/13을 구매하여 거액의 상금을 획들할 기회를 놓치지 마세요. 자세한 사항은 <a href="https://www.dhlottery.co.kr">동행복권 홈페이지</a>에서 확인하실 수 있습니다.</p>
 
 <h2 data-ke-size="size24">로또 7/13 구매 방법</h2>
 
