--- a/_posts/2024-07-17-3172.md
+++ b/_posts/2024-07-17-3172.md
@@ -1,14 +1,5 @@
 ---
-title: 1. 쯔양 혐의 구제역 재판 수사중
-2. 협박 구제역 재판 수사중 쯔양
-3. 혐의 구제역 수사중 재판 쯔양
-4. 구제역 협박 재판 수사중 쯔양
-5. 혐의 구제역 재판 수사중 쯔양
-6. 협박 구제역 재판 수사중 쯔양
-7. 재판 협박 구제역 수사중 쯔양
-8. 수사중 혐의 구제역 쯔양 재판
-9. 구제역 재판 혐의 수사중 쯔양
-10. 혐의 재판 구제역 수사중 쯔양
+title: 쯔양 혐의 구제역 재판 수사중
 categories:
   - News
 excerpt: >
