--- a/_posts/2024-07-17-3279.md
+++ b/_posts/2024-07-17-3279.md
@@ -1,11 +1,5 @@
 ---
-title: 1. 행안부장관 경찰청장 후보자 조지호 서울청장 임명
-
-2. 행안부장관 경찰청장 후보자 조지호 서울청장 임명 제청
-
-3. 후보자 행안부장관 경찰청장 조지호 임명 서울청장
-
-4. 조지호 행안부장관 경찰청장 후보자 서울청장 임명
+title: 행안부장관 경찰청장 후보자 조지호 서울청장 임명
 categories:
   - News
 excerpt: >
