--- a/_posts/2024-07-17-3289.md
+++ b/_posts/2024-07-17-3289.md
@@ -1,6 +1,5 @@
 ---
-title: - 농식품부, 닭 사육환경 관리 강화에 힘써
-- 도축검사 강화, 농식품부의 노력이 이어지고 있어
+title: 농식품부, 닭 사육환경 관리 강화에 힘써
 categories:
   - News
 excerpt: >
