--- a/_posts/2024-07-18-3393.md
+++ b/_posts/2024-07-18-3393.md
@@ -1,6 +1,5 @@
 ---
-title: 1. 정부 미복귀 전공의 의무사관 군 입대 의무화
-2. 미복귀 전공의 의무사관 군 입대 의무화되나?
+title: 미복귀 전공의 의무사관 군 입대 의무화되나?
 categories:
   - News
 excerpt: >
