--- a/_posts/2024-07-24-4332.md
+++ b/_posts/2024-07-24-4332.md
@@ -54,7 +54,7 @@ image: '/assets/img/newsdao_breakingnews.jpg'
         <td style="text-align: center; height: 17px;">문화자유교실</td>
         <td style="text-align: center; height: 17px;">9월 1일 ~ 12일</td>
         <td style="text-align: center; height: 17px;">전남 강진군</td>
-        <td style="text-align: center; height: 17px;"><a href="www.청년인문공감.com">청년인문공감 누리집</a></td>
+        <td style="text-align: center; height: 17px;"><a href="https://www.청년인문공감.com">청년인문공감 누리집</a></td>
     </tr>
 </table> 
 
